--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,13 @@
-name: screenrecorder
-description: Record your Flutter widgets and export it as a GIF
+name: screen_recorder
+description: Record your Flutter widgets and export the recordings as a GIF
 version: 0.0.1
-homepage:
+homepage: https://uekoetter.dev/
+repository: https://github.com/ueman/screenrecorder
+issue_tracker: https://github.com/ueman/screenrecorder/issues
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ^2.0.0
+  flutter: '>=2.0.0'
 
 dependencies:
   flutter:
