--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,11 @@
 name: screen_recorder
 description: Record your Flutter widgets and export the recordings as a GIF
 version: 0.0.3
-homepage: https://uekoetter.dev/
 repository: https://github.com/ueman/screenrecorder
 issue_tracker: https://github.com/ueman/screenrecorder/issues
+funding:
+  - https://github.com/sponsors/ueman
+  - https://www.buymeacoffee.com/jonasuekoetter
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
