--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,13 +1,12 @@
 name: example
 description: A new Flutter project.
-
 publish_to: 'none'
-
 version: 1.0.0+1
+
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: '>=2.0.0'
+  flutter: '>=3.4.0-34.1.pre'
 
 dependencies:
   flutter:
