--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,13 +5,13 @@ version: 1.0.0+1
 
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: '>=3.4.0-34.1.pre'
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.10.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
   screen_recorder:
     path: ../
 
