--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,10 +6,15 @@ issue_tracker: https://github.com/ueman/screenrecorder/issues
 funding:
   - https://github.com/sponsors/ueman
   - https://www.buymeacoffee.com/jonasuekoetter
+topics: 
+  - gif
+  - recording
+  - screen
+  - video
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: '>=3.4.0-34.1.pre'
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.10.0'
 
 dependencies:
   flutter:
@@ -19,3 +24,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^4.0.0
